default/objects/Vozidlo_CCS_Carnet__c/Vozidlo_CCS_Carnet__c.object-meta.xml
<CustomObject>
    <description>Vozidlo CCS Carnet.</description>
    <label>Vozidlo CCS Carnet</label>
    <nameField>
        <label>Vozidlo CCS Carnet</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vozidlo CCS Carnet</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>