default/objects/Vozidlo_CCS_Carnet__c/fields/Bezdotykova_ctecka_RFID__c.field-meta.xml
<CustomField>
    <fullName>Bezdotykova_ctecka_RFID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bezdotyková čtečka RFID.</description>
    <inlineHelpText>Bezdotyková čtečka RFID.</inlineHelpText>
    <label>Bezdotyková čtečka RFID</label>
    <type>Checkbox</type>
</CustomField>