default/objects/Vozidlo_CCS_Carnet__c/fields/Bezkontaktni__c.field-meta.xml
<CustomField>
    <fullName>Bezkontaktni__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bezkontaktní.</description>
    <inlineHelpText>Bezkontaktní.</inlineHelpText>
    <label>Bezkontaktní</label>
    <type>Checkbox</type>
</CustomField>