default/objects/Vozidlo_CCS_Carnet__c/fields/CCS_Order__c.field-meta.xml
<CustomField>
    <fullName>CCS_Order__c</fullName>
    <label>CCS Order</label>
    <referenceTo>CCS_Order__c</referenceTo>
    <relationshipLabel>CCS Carnet Unit</relationshipLabel>
    <relationshipName>Vozidlo_CCS_Carnet</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>