default/objects/Vozidlo_CCS_Carnet__c/fields/Cip_Dallas__c.field-meta.xml
<CustomField>
    <fullName>Cip_Dallas__c</fullName>
    <description>Čip Dallas.</description>
    <inlineHelpText>Čip Dallas.</inlineHelpText>
    <label>Čip Dallas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>