default/objects/Vozidlo_CCS_Carnet__c/fields/Cip_RFID__c.field-meta.xml
<CustomField>
    <fullName>Cip_RFID__c</fullName>
    <description>Čip RFID.</description>
    <inlineHelpText>Čip RFID.</inlineHelpText>
    <label>Čip RFID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>