default/objects/Vozidlo_CCS_Carnet__c/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <label>Contract Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>