default/objects/Vozidlo_CCS_Carnet__c/fields/Externi_antena__c.field-meta.xml
<CustomField>
    <fullName>Externi_antena__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Externí anténa.</description>
    <inlineHelpText>Externí anténa.</inlineHelpText>
    <label>Externí anténa</label>
    <type>Checkbox</type>
</CustomField>