default/objects/Vozidlo_CCS_Carnet__c/fields/GPRS_Fee__c.field-meta.xml
<CustomField>
    <fullName>GPRS_Fee__c</fullName>
    <label>GPRS Fee</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>