default/objects/Vozidlo_CCS_Carnet__c/fields/GPS_Unit_Installation__c.field-meta.xml
<CustomField>
    <fullName>GPS_Unit_Installation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GPS Unit Installation</label>
    <type>Checkbox</type>
</CustomField>