default/objects/Vozidlo_CCS_Carnet__c/fields/IMEI__c.field-meta.xml
<CustomField>
    <fullName>IMEI__c</fullName>
    <description>IMEI number from Merlin. Only for CCS Carnet Partner orders.</description>
    <label>IMEI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>