default/objects/Vozidlo_CCS_Carnet__c/fields/Karta_RFID__c.field-meta.xml
<CustomField>
    <fullName>Karta_RFID__c</fullName>
    <description>Karta RFID.</description>
    <inlineHelpText>Karta RFID.</inlineHelpText>
    <label>Karta RFID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>