default/objects/Vozidlo_CCS_Carnet__c/fields/Kontaktni_ctecka_cipu_Dallas__c.field-meta.xml
<CustomField>
    <fullName>Kontaktni_ctecka_cipu_Dallas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Kontaktní čtečka čipů Dallas.</description>
    <inlineHelpText>Kontaktní čtečka čipů Dallas.</inlineHelpText>
    <label>Kontaktní čtečka čipů Dallas</label>
    <type>Checkbox</type>
</CustomField>