default/objects/Vozidlo_CCS_Carnet__c/fields/Kontaktni_ZDARMA__c.field-meta.xml
<CustomField>
    <fullName>Kontaktni_ZDARMA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Kontaktní (ZDARMA).</description>
    <inlineHelpText>Kontaktní (ZDARMA).</inlineHelpText>
    <label>Kontaktní (ZDARMA)</label>
    <type>Checkbox</type>
</CustomField>