default/objects/Vozidlo_CCS_Carnet__c/fields/Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fee__c</fullName>
    <label>Monthly Fee</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>