default/objects/Vozidlo_CCS_Carnet__c/fields/Roaming__c.field-meta.xml
<CustomField>
    <fullName>Roaming__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Roaming</description>
    <inlineHelpText>Roaming</inlineHelpText>
    <label>Roaming</label>
    <type>Checkbox</type>
</CustomField>