default/objects/Vozidlo_CCS_Carnet__c/fields/Sirenka_neprihlaseny_ridic__c.field-meta.xml
<CustomField>
    <fullName>Sirenka_neprihlaseny_ridic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sirénka k indikaci nepřihlášeného řidiče.</description>
    <inlineHelpText>Sirénka k indikaci nepřihlášeného řidiče.</inlineHelpText>
    <label>Sirénka k indikaci nepřihlášeného řidiče</label>
    <type>Checkbox</type>
</CustomField>