default/objects/Vozidlo_CCS_Carnet__c/fields/Unit_Fee__c.field-meta.xml
<CustomField>
    <fullName>Unit_Fee__c</fullName>
    <description>Price per CCS Carnet Unit.</description>
    <label>Unit Fee</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>