default/objects/Vozidlo_CCS_Carnet__c/fields/Vozidlo_CCS_Carnet__c.field-meta.xml
<CustomField>
    <fullName>Vozidlo_CCS_Carnet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vozidlo CCS Carnet.</description>
    <inlineHelpText>Vozidlo CCS Carnet.</inlineHelpText>
    <label>CCS Carnet</label>
    <referenceTo>CCS_Carnet__c</referenceTo>
    <relationshipLabel>CCS Carnet Unit</relationshipLabel>
    <relationshipName>Vozidlo_CCS_Carnet</relationshipName>
    <type>Lookup</type>
</CustomField>